--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,13 @@ plugins/
 plugins/android.json
 plugins/ios.json
 www/
+resources/
+res/
 $RECYCLE.BIN/
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+package-lock.json
+
