--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "ionic",
+  "name": "curso-de-ferias-2018-mobile",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "start": "ionic lab",
+    "android": "ionic cordova run android",
+    "ios": "ionic cordova run ios",
+    "add:android": "ionic cordova platform add android",
+    "add:ios": "ionic cordova platform add ios",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "json:server": "json-server --watch ./src/providers/mock/index.json"
   },
   "dependencies": {
     "@angular/common": "5.0.3",
@@ -20,26 +26,53 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/barcode-scanner": "^4.5.2",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
-    "@ionic-native/toast": "^4.5.3",
-    "@ionic/storage": "2.1.3",
-    "cordova-plugin-x-toast": "^2.6.0",
+    "@ionic/storage": "^2.1.3",
+    "concurrently": "^3.5.1",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.2.0",
+    "express": "^4.16.2",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "json-server": "^0.12.1",
+    "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "uuid": "^3.2.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
+    "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-x-toast": {}
-    }
+      "cordova-plugin-camera": {},
+      "phonegap-plugin-barcodescanner": {
+        "CAMERA_USAGE_DESCRIPTION": " "
+      },
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-sqlite-storage": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
